<resources>
    <string name="app_name">About Me</string>
    <string name="name">Lucas Silva</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nec ornare massa. Mauris bibendum enim lectus, at tincidunt lectus lobortis quis. Nam facilisis suscipit vestibulum. Etiam ornare auctor dictum. Mauris mollis, metus quis venenatis ultricies, turpis neque iaculis elit, at vestibulum nibh enim non orci. Ut sed elementum orci. In vitae fringilla ante, quis pharetra sem. Nunc erat tellus, tempus a bibendum quis, sollicitudin sed libero. Morbi iaculis velit tortor, quis tempus ipsum interdum in. Quisque luctus diam at justo cursus dictum.
        Aliquam porta, ipsum non tempus gravida, orci diam posuere lacus, ac ultrices eros elit a elit. Suspendisse nec mi molestie, posuere lectus vitae, semper arcu. Quisque egestas tortor commodo leo placerat, cursus egestas enim finibus. Fusce ac sem convallis, posuere justo id, consectetur nisl. Nulla in sapien odio. Mauris lacinia ante vel enim facilisis scelerisque. In vitae ullamcorper quam. Proin tristique aliquam dui, at congue tortor pellentesque nec. Vestibulum vitae ultricies sapien, hendrerit sollicitudin eros. Suspendisse euismod ante ac arcu iaculis, eget accumsan diam sodales. Aliquam vestibulum hendrerit lorem, ut tincidunt tellus auctor nec. Mauris vitae tristique felis. Nulla facilisi.
        Mauris eget ipsum sit amet ante tincidunt tincidunt. Fusce a metus ut enim semper facilisis. Nulla vestibulum dignissim sapien ac laoreet. Curabitur venenatis semper urna, quis tempor urna. Nam ac metus luctus, egestas orci eu, faucibus justo. Praesent at consequat eros. Sed dictum mi vel lacus sagittis lobortis. Nunc quis semper lorem. Vestibulum hendrerit volutpat ligula, vitae commodo ligula facilisis sit amet. Sed in augue tincidunt purus ultricies porta sed a risus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
        Donec porttitor, elit et lobortis pretium, odio est tincidunt lacus, eget euismod mauris justo nec neque. Fusce tempor ac eros a semper. Ut aliquet erat ac luctus elementum. Fusce vulputate lectus ipsum, id vestibulum libero finibus a. Nunc iaculis mi diam, ullamcorper scelerisque velit tempor cursus. Suspendisse condimentum id lorem in molestie. In at efficitur tellus, eu commodo quam. Suspendisse posuere blandit consectetur. Donec et massa mattis tortor cursus hendrerit. Aliquam erat volutpat. Praesent non sem libero. Donec sagittis enim eu facilisis lacinia. Quisque eu diam non ex euismod sollicitudin eu at risus. Aliquam tempor, metus in laoreet tristique, massa nibh bibendum elit, sed tincidunt lacus sem sed nunc.
    </string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done_button_text">Done</string>
</resources>